--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1238,6 +1238,7 @@ button.alt-menu-btn.float-left {
 .slider-bg-2,
 .slider-bg-3,
 .slider-bg-4,
+.slider-bg-404,
 .slider-bg-5 {
   height: 100vh;
   background-size: cover;
@@ -1257,6 +1258,9 @@ button.alt-menu-btn.float-left {
 
 .slider-bg-4 {
   background-image: url(../img/banner/s-4.jpg); }
+
+  .slider-bg-404 {
+    background-image: url(../img/banner/404.png); }
 
 .slider-bg-5 {
   background-image: url(../img/banner/sd-1.jpg); }
@@ -1553,11 +1557,11 @@ button.alt-menu-btn.float-left {
   opacity: 1;
   visibility: visible; }
 
-.owl-nav {
+/* .owl-nav {
   right: 0;
   top: -90px;
-  position: absolute; }
-  .owl-nav .owl-prev, .owl-nav .owl-next {
+  position: absolute; } */
+  /* .owl-nav .owl-prev, .owl-nav .owl-next {
     float: left;
     width: 60px;
     height: 60px;
@@ -1565,7 +1569,7 @@ button.alt-menu-btn.float-left {
     text-align: center;
     margin: 0 5px;
     border-radius: 4px;
-    background-color: #f7f7f7; }
+    background-color: #f7f7f7; } */
 
 .popular-three {
   background-color: #f7f7f7;
@@ -2772,7 +2776,9 @@ button.alt-menu-btn.float-left {
   height: 60px;
   border-radius: 4px;
   background-color: #f7f7f7;
-  border: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
   margin-bottom: 30px;
   padding: 15px; }
 
@@ -3534,7 +3540,7 @@ ul.product-tab li.active:after {
   background-color: #f7f7f7;
   padding: 110px 0px; }
 
-.contact_third_form .contact-info input, .contact_third_form .contact-info .register-form-area select, .register-form-area .contact_third_form .contact-info select, .contact_third_form .contact-info .register-form-area textarea, .register-form-area .contact_third_form .contact-info textarea {
+.contact_third_form .contact-info input, .contact_third_form .contact-info select, .contact_third_form .contact-info .register-form-area select, .register-form-area .contact_third_form .contact-info select, .contact_third_form .contact-info .register-form-area textarea, .register-form-area .contact_third_form .contact-info textarea {
   width: 100%;
   height: 50px;
   border: none;
